--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>pedidos</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pedidos</name>
-	<description>Modulo pedidos para laboratorio de Desarrollo de App en la Nube</description>
+	<description>Modulo pedidos para laboratorio Desarrollo de Apps en la Nube</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -33,20 +33,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId> 
-			<version>3.0.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId> 
-			<version>3.0.0</version>
-		</dependency>
-		
-		
 	</dependencies>
 
 	<build>
