--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
 			<version>4.2.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>frsf.isi.dan</groupId>
+			<artifactId>memory-repo</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
