--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,20 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+
 server.port=9002
+
+#CONFIGURACION BASE DE DATOS MySQL
+spring.datasource.url=jdbc:mysql://localhost/tp-dan
+spring.datasource.username=usuario1
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+
+#CONFIGURACION HIKARI- Gestor de pool de conexiones
+spring.datasource.hikari.max-wait=10000
+spring.datasource.hikari.max-active=5
+spring.datasource.hikari.test-on-borrow=true
