--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 			<version>4.0.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-artemis</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
