--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,16 @@ server.port=9002
 spring.datasource.url=jdbc:mysql://localhost/tp-dan
 spring.datasource.username=usuario1
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 #CONFIGURACION HIKARI- Gestor de pool de conexiones
 spring.datasource.hikari.max-wait=10000
 spring.datasource.hikari.max-active=5
 spring.datasource.hikari.test-on-borrow=true
+
+#Artemis: Cola de mensajes entre procesos
+spring.artemis.host=127.0.0.1
+spring.artemis.port=61616
+spring.artemis.user=dan2021 
+spring.artemis.password=dan2021 
+spring.artemis.mode=native
