agregadas las configuraciones para el lab08

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>dan.ms</groupId>
-	<artifactId>pedidos</artifactId>
+	<artifactId>dan-ms-pedidos</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>pedidos</name>
+	<name>dan-ms-pedidos</name>
 	<description>Modulo pedidos para laboratorio de Desarrollo de App en la Nube</description>
 	<properties>
 		<java.version>11</java.version>
@@ -88,6 +88,26 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.13</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<repository>dan/app-micro-pedidos</repository>
+					<tag>${project.version}</tag>
+					<buildArgs>
+						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
