Se agrego propiedad faltante

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.hikari.max-wait=10000
 spring.datasource.hikari.max-active=5
 spring.datasource.hikari.test-on-borrow=true
+
+#CONFIGURACIONES DE ACTUATOR
+management.endpoints.web.exposure.include=prometheus
