se agrego el uso de circuitbreaker-resilience4j

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,14 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
+		<!-- Dependencia para circuitBreaker -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
+
 
 	</dependencies>
 
@@ -145,7 +153,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
