--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@
 
 server.port=9002
 spring.profiles.active=prod
+
+
+#Artemis: Cola de mensajes entre procesos
+spring.artemis.host=127.0.0.1
+spring.artemis.port=61616
+spring.artemis.user=dan2021 
+spring.artemis.password=dan2021 
+spring.artemis.mode=native
