--- a/src/main/resources/application-testing.properties
+++ b/src/main/resources/application-testing.properties
@@ -17,7 +17,12 @@ spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.hbm2ddl.import_files=import-estado-pedido-profile-testing.sql, import-tipos-obra-profile-testing.sql, import-productos-profile-testing.sql, import-obra-profile-testing.sql
 
 
-
+#Artemis: Cola de mensajes entre procesos
+spring.artemis.host=127.0.0.1
+spring.artemis.port=61616
+spring.artemis.user=dan2021 
+spring.artemis.password=dan2021 
+spring.artemis.mode=native
 
 
 
