--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,10 +8,13 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=none
 
 
-#CONFIGURACION HIKARI- Gestor de pool de conexiones
-spring.datasource.hikari.max-wait=10000
-spring.datasource.hikari.max-active=5
-spring.datasource.hikari.test-on-borrow=true
 
 #CONFIGURACIONES DE ACTUATOR
 management.endpoints.web.exposure.include=prometheus
+
+#Artemis: Cola de mensajes entre procesos
+spring.artemis.host=127.0.0.1
+spring.artemis.port=61616
+spring.artemis.user=dan2021 
+spring.artemis.password=dan2021 
+spring.artemis.mode=native
