--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,17 @@
 #spring.h2.console.enabled=true
 #spring.jpa.show-sql=true
 
+spring.application.name = modulo-pedidos
+
 server.port=9002
 spring.profiles.active=prod
 
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 
-#Artemis: Cola de mensajes entre procesos
-spring.artemis.host=127.0.0.1
-spring.artemis.port=61616
-spring.artemis.user=dan2021 
-spring.artemis.password=dan2021 
-spring.artemis.mode=native
+eureka.client.registerWithEureka=true 
+eureka.client.fetchRegistry=true
+
+#CONFIGURACION HIKARI- Gestor de pool de conexiones
+spring.datasource.hikari.max-wait=10000
+spring.datasource.hikari.max-active=5
+spring.datasource.hikari.test-on-borrow=true
